--- a/video/src/App.scss
+++ b/video/src/App.scss
@@ -5,7 +5,6 @@ html {
 
 .app {
   height: 100vh;
-  // width: 100%;
   background-color: black;
   display: grid;
   place-items: center;
@@ -15,22 +14,24 @@ html {
   position: relative;
   //高度设置
   height: 100%;
-  width: 100%;
+  max-width: 544px;
+  // width: 100%;
+  overflow: scroll;
   // display: flex;
   // flex-wrap: wrap;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  max-width: 500px;
+  // overflow-y: scroll;
+  // overflow-x: hidden;
+  // max-width: 500px;
   scroll-snap-type: y mandatory;
   
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 // 隐藏滚动条
 .app-videos::-webkit-scrollbar {
-  display: none;
+display: none;
 }
-
-
-
