--- a/video/src/Video.scss
+++ b/video/src/Video.scss
@@ -1,8 +1,12 @@
-.video {
+.Video {
   position: relative;
+  display: flex;
+  justify-content: center;/*水平居中*/
+  // position: relative;
   background-color: black;
   width: 100%;
-  height: 100%;
+  // height: 100%;
+  // height: 667px;
   scroll-snap-align: start;
 }
 
@@ -14,14 +18,13 @@
   object-fit: scale-down;
   width: 100%;
   height: 100%;
-  top: 50%;   
-  left: 50%;   
+  // height: 667px;
+  // top: 50%;   
+  // left: 50%;   
   }
 
 .video-pause {
   position: absolute;
-  // margin-left: 45%;
-  // margin-top: 79%;
   top: 50%;   
   left: 50%;   
   -webkit-transform: translate(-50%, -50%);   
