--- a/video/src/TabBar.scss
+++ b/video/src/TabBar.scss
@@ -18,7 +18,8 @@
 .tabBarOptions a {
   color: rgba(255,255,255,0.5);
   width: 34.6px;
-  margin-bottom: 18.75px;
+  // margin-bottom: 18.75px;
+  margin-bottom: 10px;
   text-align: center;
   font-size: 16px;
   font-weight: bold;
