--- a/video/src/VideoFooter.scss
+++ b/video/src/VideoFooter.scss
@@ -1,19 +1,17 @@
 .videoFooter {
   position: absolute;
+  width: 100%;
   color: white;
-  bottom: 8%;
-  // margin-right: -5%;
-  display: flex;
+  bottom: 10%;
   border-bottom:1px solid rgba(255,255,255,0.3);
 }
 
 .videoFooter-text{
   margin-bottom: 3%;
   margin-left: 3%;
-  // flex: 1;
   display:flex;
   flex-direction:column;
-  padding-right: 26%;
+  width: 75%;
 }
 
 .channel {
@@ -27,15 +25,7 @@
 }
 .ticker-note{
   height: 20px;
-  // float: left;
 }
 marquee{
   width: 50%;
-  // float: left;
 }
-
-// .music-record {
-//   position: absolute;
-//   top: 75%;
-//   left: 78%;
-// }
